--- a/login.html
+++ b/login.html
@@ -9,6 +9,9 @@
 	<link rel="stylesheet" href="css/login.css">
 	<script src="assets/jquery/jquery.min.js"></script>
 	<script src="assets/bootstrap/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="assets/axios.js"></script>
+	<script type="text/javascript" src="js/common.js"></script>
+	<script type="text/javascript" src="js/login.js"></script>
 </head>
 <body>
 	<div class="container">
@@ -23,15 +26,15 @@
 	        			<i class="fa fa-key"></i>
 	        		</div>
 	            </div>
-	            <div class="form-bottom">
-	                <form role="form" action="" method="post" class="login-form">
+	            <div class="form-bottom" >
+	                <form role="form" action="" method="post" class="login-form" id="userform">
 	                	<div class="form-group">
-	                    	<input type="text" placeholder="用户名..." class="form-username form-control">
+	                    	<input type="text" placeholder="用户名..." class="form-username form-control" name="username">
 	                    </div>
 	                    <div class="form-group">
-	                    	<input type="password" placeholder="密码..." class="form-password form-control">
+	                    	<input type="password" placeholder="密码..." class="form-password form-control" name="password">
 	                    </div>
-	                    <button type="submit" class="btn btn-primary">登录</button>
+	                    <button type="button" class="btn btn-primary" id="loginbtn">登录</button>
 	                </form>
 	            </div>
 	        </div>
